--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,15 +13,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-15 Mon 11:34]
+#+CAPTION: Clock summary at [2018-10-15 Mon 11:54]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *3:27* |      |      |   0.0 |
+| *Total time*                                                                | *3:46* |      |      |   0.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 3:27   |      |      |   0.0 |
-| Active                                                                      |        | 3:27 |      |   0.0 |
-| Edit release notes for previous sprint                                      |        |      | 0:46 |   0.0 |
+| Stories                                                                     | 3:46   |      |      |   0.0 |
+| Active                                                                      |        | 3:46 |      |   0.0 |
+| Edit release notes for previous sprint                                      |        |      | 1:05 |   0.0 |
 | Sprint and product backlog grooming                                         |        |      | 0:10 |   0.0 |
 | Create a document with release steps                                        |        |      | 0:11 |   0.0 |
 | High-level model thoughts                                                   |        |      | 2:20 |   0.0 |
@@ -31,6 +31,7 @@
 *** COMPLETED Edit release notes for previous sprint                  :story:
     CLOSED: [2018-10-15 Mon 11:22]
     :LOGBOOK:
+    CLOCK: [2018-10-15 Mon 11:35]--[2018-10-15 Mon 11:54] =>  0:19
     CLOCK: [2018-10-15 Mon 10:36]--[2018-10-15 Mon 11:22] =>  0:46
     :END:
 
@@ -97,9 +98,9 @@ You can download binaries from [Bintray](https://bintray.com/masd-project/main/d
 For all other architectures and/or operative systems, you will need to build Dogen from source. Source downloads are available below.
 #+end_src
 
-- [[https://twitter.com/MarcoCraveiro/status/948594830267043840][Tweet]]
-- [[https://www.linkedin.com/feed/update/urn:li:activity:6354361007493775361][LinkedIn]]
-- [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
+- [[https://twitter.com/MarcoCraveiro/status/1051785972206247936][Tweet]]
+- [[https://www.linkedin.com/feed/update/urn:li:activity:6457553749215899648/][LinkedIn]]
+- [[https://gitter.im/MASD-Project/Lobby][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
