--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -1,4 +1,4 @@
-#+title: Sprint Backlog 09
+#+title: Sprint Backlog 10
 #+options: date:nil toc:nil author:nil num:nil
 #+todo: STARTED | COMPLETED CANCELLED POSTPONED
 #+tags: { story(s) epic(e) }
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-15 Mon 16:29]
+#+CAPTION: Clock summary at [2018-10-15 Mon 17:57]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:43* |      |      |   0.0 |
+| *Total time*                                                                | *9:08* |      |      |   0.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:43   |      |      |   0.0 |
-| Active                                                                      |        | 7:43 |      |   0.0 |
+| Stories                                                                     | 9:08   |      |      |   0.0 |
+| Active                                                                      |        | 9:08 |      |   0.0 |
 | Edit release notes for previous sprint                                      |        |      | 1:05 |   0.0 |
 | Sprint and product backlog grooming                                         |        |      | 0:10 |   0.0 |
 | Create a document with release steps                                        |        |      | 0:11 |   0.0 |
-| Add vcpkg support to osx builds                                             |        |      | 3:00 |   0.0 |
-| Add support for kcov                                                        |        |      | 0:57 |   0.0 |
+| Add vcpkg support to osx builds                                             |        |      | 3:59 |   0.0 |
+| Add support for kcov                                                        |        |      | 1:23 |   0.0 |
 | High-level model thoughts                                                   |        |      | 2:20 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -122,6 +122,7 @@ document for this.
 
 *** STARTED Add vcpkg support to osx builds                           :story:
     :LOGBOOK:
+    CLOCK: [2018-10-15 Mon 16:30]--[2018-10-15 Mon 17:29] =>  0:59
     CLOCK: [2018-10-15 Mon 12:47]--[2018-10-15 Mon 15:31] =>  2:44
     CLOCK: [2018-10-15 Mon 11:54]--[2018-10-15 Mon 12:10] =>  0:16
     :END:
@@ -145,6 +146,8 @@ Notes:
 
 *** STARTED Add support for kcov                                      :story:
     :LOGBOOK:
+    CLOCK: [2018-10-15 Mon 17:51]--[2018-10-15 Mon 17:57] =>  0:06
+    CLOCK: [2018-10-15 Mon 17:30]--[2018-10-15 Mon 17:50] =>  0:20
     CLOCK: [2018-10-15 Mon 16:05]--[2018-10-15 Mon 16:29] =>  0:24
     CLOCK: [2018-10-15 Mon 15:31]--[2018-10-15 Mon 16:04] =>  0:33
     :END:
