--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,18 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-15 Mon 17:57]
+#+CAPTION: Clock summary at [2018-10-15 Mon 18:05]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *9:08* |      |      |   0.0 |
+| *Total time*                                                                | *9:15* |      |      |   0.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 9:08   |      |      |   0.0 |
-| Active                                                                      |        | 9:08 |      |   0.0 |
+| Stories                                                                     | 9:15   |      |      |   0.0 |
+| Active                                                                      |        | 9:15 |      |   0.0 |
 | Edit release notes for previous sprint                                      |        |      | 1:05 |   0.0 |
 | Sprint and product backlog grooming                                         |        |      | 0:10 |   0.0 |
 | Create a document with release steps                                        |        |      | 0:11 |   0.0 |
-| Add vcpkg support to osx builds                                             |        |      | 3:59 |   0.0 |
+| Add vcpkg support to osx builds                                             |        |      | 4:06 |   0.0 |
 | Add support for kcov                                                        |        |      | 1:23 |   0.0 |
 | High-level model thoughts                                                   |        |      | 2:20 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -122,6 +122,7 @@ document for this.
 
 *** STARTED Add vcpkg support to osx builds                           :story:
     :LOGBOOK:
+    CLOCK: [2018-10-15 Mon 17:58]--[2018-10-15 Mon 18:05] =>  0:07
     CLOCK: [2018-10-15 Mon 16:30]--[2018-10-15 Mon 17:29] =>  0:59
     CLOCK: [2018-10-15 Mon 12:47]--[2018-10-15 Mon 15:31] =>  2:44
     CLOCK: [2018-10-15 Mon 11:54]--[2018-10-15 Mon 12:10] =>  0:16
