--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-15 Mon 18:05]
-| <75>                                                                        |        |      |      |       |
-| Headline                                                                    | Time   |      |      |     % |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *9:15* |      |      |   0.0 |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 9:15   |      |      |   0.0 |
-| Active                                                                      |        | 9:15 |      |   0.0 |
-| Edit release notes for previous sprint                                      |        |      | 1:05 |   0.0 |
-| Sprint and product backlog grooming                                         |        |      | 0:10 |   0.0 |
-| Create a document with release steps                                        |        |      | 0:11 |   0.0 |
-| Add vcpkg support to osx builds                                             |        |      | 4:06 |   0.0 |
-| Add support for kcov                                                        |        |      | 1:23 |   0.0 |
-| High-level model thoughts                                                   |        |      | 2:20 |   0.0 |
+#+CAPTION: Clock summary at [2018-10-15 Mon 19:39]
+| <75>                                                                        |         |       |      |       |
+| Headline                                                                    | Time    |       |      |     % |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| *Total time*                                                                | *10:29* |       |      |   0.0 |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| Stories                                                                     | 10:29   |       |      |   0.0 |
+| Active                                                                      |         | 10:29 |      |   0.0 |
+| Edit release notes for previous sprint                                      |         |       | 1:05 |   0.0 |
+| Sprint and product backlog grooming                                         |         |       | 0:10 |   0.0 |
+| Create a document with release steps                                        |         |       | 0:11 |   0.0 |
+| Add vcpkg support to osx builds                                             |         |       | 4:06 |   0.0 |
+| Add support for kcov                                                        |         |       | 2:37 |   0.0 |
+| High-level model thoughts                                                   |         |       | 2:20 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -147,6 +147,8 @@ Notes:
 
 *** STARTED Add support for kcov                                      :story:
     :LOGBOOK:
+    CLOCK: [2018-10-15 Mon 19:01]--[2018-10-15 Mon 19:39] =>  0:38
+    CLOCK: [2018-10-15 Mon 17:58]--[2018-10-15 Mon 18:34] =>  0:36
     CLOCK: [2018-10-15 Mon 17:51]--[2018-10-15 Mon 17:57] =>  0:06
     CLOCK: [2018-10-15 Mon 17:30]--[2018-10-15 Mon 17:50] =>  0:20
     CLOCK: [2018-10-15 Mon 16:05]--[2018-10-15 Mon 16:29] =>  0:24
@@ -194,7 +196,9 @@ Notes:
 
 *** Windows MSI is very large                                         :story:
 
-80 MB
+Package went from 5 MB to 80 MB over the last 3 days. The cause for
+this appears to be that we started including tests on the standard
+package.
 
 *** Ignore all failing tests                                          :story:
 
