--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-15 Mon 19:39]
+#+CAPTION: Clock summary at [2018-10-16 Tue 09:41]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *10:29* |       |      |   0.0 |
+| *Total time*                                                                | *11:41* |       |      |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 10:29   |       |      |   0.0 |
-| Active                                                                      |         | 10:29 |      |   0.0 |
+| Stories                                                                     | 11:41   |       |      |   0.0 |
+| Active                                                                      |         | 11:41 |      |   0.0 |
 | Edit release notes for previous sprint                                      |         |       | 1:05 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       | 0:10 |   0.0 |
 | Create a document with release steps                                        |         |       | 0:11 |   0.0 |
-| Add vcpkg support to osx builds                                             |         |       | 4:06 |   0.0 |
-| Add support for kcov                                                        |         |       | 2:37 |   0.0 |
+| Add vcpkg support to osx builds                                             |         |       | 4:46 |   0.0 |
+| Add support for kcov                                                        |         |       | 3:09 |   0.0 |
 | High-level model thoughts                                                   |         |       | 2:20 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -122,6 +122,8 @@ document for this.
 
 *** STARTED Add vcpkg support to osx builds                           :story:
     :LOGBOOK:
+    CLOCK: [2018-10-16 Tue 09:28]--[2018-10-16 Tue 09:38] =>  0:10
+    CLOCK: [2018-10-15 Mon 22:50]--[2018-10-15 Mon 23:20] =>  0:30
     CLOCK: [2018-10-15 Mon 17:58]--[2018-10-15 Mon 18:05] =>  0:07
     CLOCK: [2018-10-15 Mon 16:30]--[2018-10-15 Mon 17:29] =>  0:59
     CLOCK: [2018-10-15 Mon 12:47]--[2018-10-15 Mon 15:31] =>  2:44
@@ -147,6 +149,8 @@ Notes:
 
 *** STARTED Add support for kcov                                      :story:
     :LOGBOOK:
+    CLOCK: [2018-10-16 Tue 09:39]--[2018-10-16 Tue 09:41] =>  0:02
+    CLOCK: [2018-10-15 Mon 22:50]--[2018-10-15 Mon 23:20] =>  0:30
     CLOCK: [2018-10-15 Mon 19:01]--[2018-10-15 Mon 19:39] =>  0:38
     CLOCK: [2018-10-15 Mon 17:58]--[2018-10-15 Mon 18:34] =>  0:36
     CLOCK: [2018-10-15 Mon 17:51]--[2018-10-15 Mon 17:57] =>  0:06
